LATEST VERSION
-----------------------------
- implement INTERLIS RunTimeParameterDef (#221) 
- remove static reference to GUI (Swing) classes from Main class (#265)
- iox-ili-1.21.6-SNAPSHOT
- ili2c-5.2.1-SNAPSHOT

ilivalidator 1.11.9 (2020-12-28)
-----------------------------
- fix check-repo-data fails with java.io.FileNotFoundException (#291)
- fix --createIliData fails with NPE if file in base folder (#292)
- Log-Faehigkeit der INTERLIS.areArea()-Funktion (#240)
- ili2c-5.1.5
- iox-ili-1.21.4

ilivalidator 1.11.8 (2020-10-02)
-----------------------------
- fix java.io.NotSerializableException (#280)
- ili2c-5.1.4
- iox-ili-1.21.3

ilivalidator 1.11.7 (2020-09-29)
-----------------------------
- ili2c-5.1.3
- iox-ili-1.21.2
- log --modeldir value as modeldir (#256) 
- Overlaying AREA not detected (#263)
- ignore polygon building errors if defaultGeometryTypeValidation="off"
- improve error messages in INI-file parsing (#271)
- wrongly reports duplicate TIDs (#266)
- Attempting to disable geometry validation with no success (#272)

ilivalidator 1.11.6 (2020-05-01)
-----------------------------
- fails to lookup ili24 model if xtf24 transfer file (#239)
- Check Base64 input character (#246)
- No object found with OID null (#249)
- iox-ili-1.21.0
- ili2c-5.1.1

ilivalidator 1.11.5 (2020-04-01)
-----------------------------
- Missing check when write to "unwriteable" log-file (#228)
- NPE with ili23 / RoadsExgm2ien_Symbols-20160121.xml (#231)
- ArrayIndexOutOfBoundsException with n-ary association (#232)
- Xtf24: wrong xmlns for extended attributes (#235)
- Xtf24: fails to read STRUCTUREs defined at model level (#236)
- Xtf24: missing line number in messages (#237)
- Xtf24: fails to read ref of embedded assoc with attrs (#238)
- GUI: "Job done" message in GUI (#234)
- GUI: scroll log area to end (#234)
- ili2c-5.0.8
- ehibasics-1.3.0
- iox-ili-1.20.18

ilivalidator 1.11.4 (2020-03-02)
-----------------------------